<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".VehicleSelectionActivity">

    <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/select_vehicle_title"
            android:id="@+id/vehicle_sel_toolbar" android:background="@color/colorPrimaryDark" android:elevation="8dp">

    </androidx.appcompat.widget.Toolbar>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="96dp"
            android:id="@+id/swipe_container">

        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/vehicle_selection_list"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <TextView
            android:text="@string/select_vehicle_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginTop="64dp"
            android:textSize="16sp" android:layout_marginStart="16dp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp" android:layout_gravity="bottom">

        <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:text="@string/create_widget"
                app:cornerRadius="12dp"
                android:textSize="18sp"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                style="@style/Widget.MaterialComponents.Button"
                android:textColor="@android:color/black"
                android:onClick="onClick" android:id="@+id/create_widget" android:clickable="false"/>

        <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:text="@string/change_account"
                android:textSize="18sp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                app:cornerRadius="12dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:onClick="onClick" android:id="@+id/change_account"/>


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.coordinatorlayout.widget.CoordinatorLayout>