<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SplashActivity"
>

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="220dp" app:srcCompat="@drawable/png_icon_large" android:id="@+id/appicon_login"
            android:transitionName="shareLogo"/>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="30dp" app:srcCompat="@drawable/text_title" android:id="@+id/apptitle_login"
            android:layout_marginTop="180dp"
    android:transitionName="shareTitle"/>
    <com.google.android.material.button.MaterialButton
            android:text="@string/login_account"
            android:layout_width="300dp"
            android:layout_height="64dp" android:id="@+id/buttonLogin"
            android:textSize="18sp"
            android:layout_gravity="bottom|center_horizontal" android:layout_marginBottom="36dp"
            style="@style/NavigationButtonStyle"
    android:onClick="loginClick"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView" android:layout_marginTop="245dp"
            android:layout_marginLeft="48dp" android:layout_marginRight="48dp" android:textSize="14sp"
            android:text="@string/login_hint"/>
    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:boxBackgroundColor="#891d1d"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" android:layout_marginTop="280dp" android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
    android:nextFocusForward="@id/user_password">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:maxLength="100"
                android:id="@+id/user_email"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxBackgroundColor="#891d1d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="355dp"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:maxLength="16"
                android:id="@+id/user_password"

       />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>